--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Google</title>
         <link rel="stylesheet" href="styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="nav_bar d-flex flex-row-reverse">
@@ -11,10 +14,21 @@
             <a href="advanced_search.html">Advanced Search</a>
         </div>
 
+        <div class="logo">
+            <img src="assets/moogle.jpg" alt="Moogle Logo">
+        </div>
+        
         <div class="center_box">
+
+            <!-- In <form>, Once the submit input were clicked, the value and key (name) with parameter "name" were sent by browser (Strict Set of key-value pair)-->
+            <!-- The fun fact is that the value "I'm+Feeling+Lucky" is just a passenger, it is useless for server!-->
             <form action="https://google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
+                <input type="text" name="q" id="search_bar">
+                <div class="button_list">
+                    <input type="submit" value="Moogle Search" class="button">
+                    <input type="submit" value="I'm Feeling Lucky" class="button" name="btnI">
+                </div>
+                
             </form>
         </div>
 
