Complete advanced_search page

--- a/advanced_search.html
+++ b/advanced_search.html
@@ -12,31 +12,34 @@
             </a>
         </div>
 
-        <label class="title">Advanced Search</label>
+        <main>
+        <lable class="title">Advanced Search</lable>
 
         <div class="subtitle">Find pages with...</div>
         
-        <form action="https://google.com/search">
-            <div class="a_kind">
-                <label class="fine">all these words:</label>
-                <input class="box" type="text" name="as_q">
-            </div>
-            <div class="a_kind">
-                <label class="fine">this exact word or phrase:</label>
-                <input class="box" type="text" name="as_epq">
-            </div>
-            <div class="a_kind">
-                <label class="fine">any of these words:</label>
-                <input class="box" type="text" name="as_oq">
-            </div>
-            <div class="a_kind">
-                <label class="fine">none of these words:</label>
-                <input class="box" type="text" name="as_eq">
-            </div>
-
-            <button type="submit" class="button">
-                Advanced Search
-            </button>
-        </form>
+            <form action="https://google.com/search">
+                <div class="a_kind">
+                    <label class="fine">all these words:</label>
+                    <input class="box" type="text" name="as_q">
+                </div>
+                <div class="a_kind">
+                    <label class="fine">this exact word or phrase:</label>
+                    <input class="box" type="text" name="as_epq">
+                </div>
+                <div class="a_kind">
+                    <label class="fine">any of these words:</label>
+                    <input class="box" type="text" name="as_oq">
+                </div> 
+                <div class="a_kind">
+                    <label class="fine">none of these words:</label>
+                    <input class="box" type="text" name="as_eq">
+                </div>
+                <div class="button_parent">
+                    <button type="submit" class="button">
+                        Advanced Search
+                    </button>  
+                </div>
+            </form>
+        </main>
     </body>
 </html>
