--- a/advanced_search.html
+++ b/advanced_search.html
@@ -13,7 +13,7 @@
         </div>
 
         <main>
-        <lable class="title">Advanced Search</lable>
+        <label class="title">Advanced Search</label>
 
         <div class="subtitle">Find pages with...</div>
         
@@ -37,6 +37,7 @@
                 <div class="button_parent">
                     <button type="submit" class="button">
                         Advanced Search
+                        abc
                     </button>  
                 </div>
             </form>
